Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22777

Assertion `thd->rgi_slave' failed in process_commit_alter / process_rollback_alter

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 10.5.4
    • Replication
    • None

    Description

      10.5-olter-v4 bca803bda00cf9bc6462:

      --source include/have_innodb.inc
      --source include/master-slave.inc
       
      --connection slave
       
      CREATE TABLE `t1` ( col3 int NOT NULL, KEY `idx` (`col3`)) engine=innodb;
      ALTER  TABLE t1 ADD PRIMARY KEY ( col3 ) /*!100001 EXECUTE = COMMIT 12 */;
       
      --connection master
      drop table t1;
      --sync_slave_with_master
      --source include/rpl_end.inc
      
      

      10.5 8569dac1ec9f6853a0b2f3

      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #5  0x00007f40e5c37801 in __GI_abort () at abort.c:79
      #6  0x00007f40e5c2739a in __assert_fail_base (fmt=0x7f40e5dae7d8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x557a519cdd19 "thd->rgi_slave", file=file@entry=0x557a519cdc70 "/10.5o/sql/sql_alter.cc", line=line@entry=397, function=function@entry=0x557a519ce120 <process_commit_alter(THD*, unsigned long long)::__PRETTY_FUNCTION__> "int process_commit_alter(THD*, uint64)") at assert.c:92
      #7  0x00007f40e5c27412 in __GI___assert_fail (assertion=0x557a519cdd19 "thd->rgi_slave", file=0x557a519cdc70 "/10.5o/sql/sql_alter.cc", line=397, function=0x557a519ce120 <process_commit_alter(THD*, unsigned long long)::__PRETTY_FUNCTION__> "int process_commit_alter(THD*, uint64)") at assert.c:101
      #8  0x0000557a50e28982 in process_commit_alter (thd=0x7f4098000d60, thread_id=12) at /10.5o/sql/sql_alter.cc:397
      #9  0x0000557a50e298ef in Sql_cmd_alter_table::execute (this=0x7f4098012b20, thd=0x7f4098000d60) at /10.5o/sql/sql_alter.cc:652
      #10 0x0000557a50c8e81a in mysql_execute_command (thd=0x7f4098000d60) at /10.5o/sql/sql_parse.cc:5959
      #11 0x0000557a50c94a38 in mysql_parse (thd=0x7f4098000d60, rawbuf=0x7f4098012258 "ALTER  TABLE t1 ADD PRIMARY KEY ( col3 ) /*!100001 EXECUTE = COMMIT 12 */", length=73, parser_state=0x7f40da4d04e0, is_com_multi=false, is_next_command=false) at /10.5o/sql/sql_parse.cc:7988
      #12 0x0000557a50c7fac0 in dispatch_command (command=COM_QUERY, thd=0x7f4098000d60, packet=0x7f40980088e1 "ALTER  TABLE t1 ADD PRIMARY KEY ( col3 ) /*!100001 EXECUTE = COMMIT 12 */", packet_length=73, is_com_multi=false, is_next_command=false) at /10.5o/sql/sql_parse.cc:1845
      #13 0x0000557a50c7e219 in do_command (thd=0x7f4098000d60) at /10.5o/sql/sql_parse.cc:1363
      #14 0x0000557a50e1ed5d in do_handle_one_connection (connect=0x557a54f7f840, put_in_cache=true) at /10.5o/sql/sql_connect.cc:1422
      #15 0x0000557a50e1ea8c in handle_one_connection (arg=0x557a54f7f840) at /10.5o/sql/sql_connect.cc:1319
      #16 0x0000557a5133ab40 in pfs_spawn_thread (arg=0x557a54f7f910) at /10.5o/storage/perfschema/pfs.cc:1862
      #17 0x00007f40e6b326db in start_thread (arg=0x7f40da4d1700) at pthread_create.c:463
      #18 0x00007f40e5d1888f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      
      

      the same with EXECUTE = ROLLBACK:

       
      #5  0x00007f038c316801 in __GI_abort () at abort.c:79
      #6  0x00007f038c30639a in __assert_fail_base (fmt=0x7f038c48d7d8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x562573dc1d19 "thd->rgi_slave", file=file@entry=0x562573dc1c70 "/10.5o/sql/sql_alter.cc", line=line@entry=452, function=function@entry=0x562573dc2160 <process_rollback_alter(THD*, unsigned long long)::__PRETTY_FUNCTION__> "int process_rollback_alter(THD*, uint64)") at assert.c:92
      #7  0x00007f038c306412 in __GI___assert_fail (assertion=0x562573dc1d19 "thd->rgi_slave", file=0x562573dc1c70 "/10.5o/sql/sql_alter.cc", line=452, function=0x562573dc2160 <process_rollback_alter(THD*, unsigned long long)::__PRETTY_FUNCTION__> "int process_rollback_alter(THD*, uint64)") at assert.c:101
      #8  0x000056257321cd2f in process_rollback_alter (thd=0x7f0338000d60, thread_id=12) at /10.5o/sql/sql_alter.cc:452
      #9  0x000056257321d910 in Sql_cmd_alter_table::execute (this=0x7f0338012b28, thd=0x7f0338000d60) at /10.5o/sql/sql_alter.cc:655
      #10 0x000056257308281a in mysql_execute_command (thd=0x7f0338000d60) at /10.5o/sql/sql_parse.cc:5959
      #11 0x0000562573088a38 in mysql_parse (thd=0x7f0338000d60, rawbuf=0x7f0338012258 "ALTER  TABLE t1 ADD PRIMARY KEY ( col3 ) /*!100001 EXECUTE = ROLLBACK 12 */", length=75, parser_state=0x7f03841a44e0, is_com_multi=false, is_next_command=false) at /10.5o/sql/sql_parse.cc:7988
      #12 0x0000562573073ac0 in dispatch_command (command=COM_QUERY, thd=0x7f0338000d60, packet=0x7f03380088e1 "ALTER  TABLE t1 ADD PRIMARY KEY ( col3 ) /*!100001 EXECUTE = ROLLBACK 12 */", packet_length=75, is_com_multi=false, is_next_command=false) at /10.5o/sql/sql_parse.cc:1845
      #13 0x0000562573072219 in do_command (thd=0x7f0338000d60) at /10.5o/sql/sql_parse.cc:1363
      #14 0x0000562573212d5d in do_handle_one_connection (connect=0x562576b9c840, put_in_cache=true) at /10.5o/sql/sql_connect.cc:1422
      #15 0x0000562573212a8c in handle_one_connection (arg=0x562576b9c840) at /10.5o/sql/sql_connect.cc:1319
      #16 0x000056257372eb40 in pfs_spawn_thread (arg=0x562576b9c910) at /10.5o/storage/perfschema/pfs.cc:1862
      #17 0x00007f038d2116db in start_thread (arg=0x7f03841a5700) at pthread_create.c:463
      #18 0x00007f038c3f788f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      with EXECUTE = UNTIL COMMIT:

      #5  0x00007ff3b0694801 in __GI_abort () at abort.c:79
      #6  0x00007ff3b068439a in __assert_fail_base (fmt=0x7ff3b080b7d8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x556f4e464498 "0", file=file@entry=0x556f4e464178 "/10.5o/sql/protocol.cc", line=line@entry=617, function=function@entry=0x556f4e464b10 <Protocol::end_statement()::__PRETTY_FUNCTION__> "void Protocol::end_statement()") at assert.c:92
      #7  0x00007ff3b0684412 in __GI___assert_fail (assertion=0x556f4e464498 "0", file=0x556f4e464178 "/10.5o/sql/protocol.cc", line=617, function=0x556f4e464b10 <Protocol::end_statement()::__PRETTY_FUNCTION__> "void Protocol::end_statement()") at assert.c:101
      #8  0x0000556f4d6646aa in Protocol::end_statement (this=0x7ff368001348) at /10.5o/sql/protocol.cc:617
      #9  0x0000556f4d78db4f in dispatch_command (command=COM_QUERY, thd=0x7ff368000d60, packet=0x7ff3680088e1 "ALTER  TABLE t1 ADD PRIMARY KEY ( col3 ) /*!100001 EXECUTE = UNTIL COMMIT 12 */", packet_length=79, is_com_multi=false, is_next_command=false) at /10.5o/sql/sql_parse.cc:2437
      #10 0x0000556f4d78a219 in do_command (thd=0x7ff368000d60) at /10.5o/sql/sql_parse.cc:1363
      #11 0x0000556f4d92ad5d in do_handle_one_connection (connect=0x556f511cab70, put_in_cache=true) at /10.5o/sql/sql_connect.cc:1422
      #12 0x0000556f4d92aa8c in handle_one_connection (arg=0x556f511cab70) at /10.5o/sql/sql_connect.cc:1319
      #13 0x0000556f4de46b40 in pfs_spawn_thread (arg=0x556f511cac40) at /10.5o/storage/perfschema/pfs.cc:1862
      #14 0x00007ff3b158f6db in start_thread (arg=0x7ff3a8523700) at pthread_create.c:463
      #15 0x00007ff3b077588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.