MDEV-22777 Assertion `thd->rgi_slave' failed in process_commit_alter / process_rollback_alte